
syntax = "proto3";
package reservation;

import "google/protobuf/timestamp.proto";

enum ReservationStatus {
    RESERVATION_STATUS_UNKNOWN = 0;
    RESERVATION_STATUS_PENDING = 1;
    RESERVATION_STATUS_CONFIRMED = 2;
    RESERVATION_STATUS_BLOCKED = 3;
}

enum ReservationUpdateType {
    RESERVATION_UPDATE_TYPE_UNKNOWN = 0;
    RESERVATION_UPDATE_TYPE_CREATE = 1;
    RESERVATION_UPDATE_TYPE_UPDATE = 2;
    RESERVATION_UPDATE_TYPE_CADELETE = 3;
}

message Reservation {
    int64 id = 1;
    string user_id = 2;
    ReservationStatus status = 3;

    // resource reservation window
    string resource_id = 4;
    google.protobuf.Timestamp start = 5;
    google.protobuf.Timestamp end = 6;

    // extra data
    string note = 7;
}

message ReserveRequest {
    Reservation reservation = 1;
}

message ReserveResponse {
    Reservation reservation = 1;
}

message UpdateRequest {
    int64 id = 1;
    string note = 2;
}

message UpdateResponse {
    Reservation reservation = 1;
}

message ConfirmRequest {
    int64 id = 1;
}

message ConfirmResponse {
    Reservation reservation = 1;
}

message CancelRequest {
    int64 id = 1;
}

message CancelResponse {
    Reservation reservation = 1;
}

message GetRequest {
    int64 id = 1;
}

message GetResponse {
    Reservation reservation = 1;
}

message ReservationQuery {
    string resource_id = 1;
    string user_id = 2;
    // use status to filter result. If UNKNOWN, return all reservations
    ReservationStatus status = 3;
    google.protobuf.Timestamp start = 4;
    google.protobuf.Timestamp end = 5;
    // current page for query
    int32 page = 6;
    // page size for the query
    int32 page_size = 7;
    // sort direction
    bool desc = 8;
}

message QueryRequest {
    ReservationQuery query = 1;
}

// query reservations, order by id
message ReservationFilter {
    // resource id for the reservation query, If empty, query all reservations
    string resource_id = 1;
    // user id for the reservation query, if empty, query all reservations
    string user_id = 2;
    // use status to filter result. If UNKNOWN, return all reservations
    ReservationStatus status = 3;
    // cursor
    int64 cursor = 4;
    // page size for the query
    int32 page_size = 65;
    // sort direction
    bool desc = 6;
}

message FilterRequest {
    ReservationFilter filter = 1;
}

message FilterPager {
    int64 prev = 1;
    int64 next = 2;
    int32 total = 3;
}

message FilterResponse {
    repeated Reservation reservations = 1;
    FilterPager pager = 2;
}

message ListenRequest {}
message ListenResponse {
    ReservationUpdateType op = 1;
    Reservation reservation = 2;
}

service ReservationService {
    rpc reserve(ReserveRequest) returns (ReserveResponse);
    rpc confirm(ConfirmRequest) returns (ConfirmResponse);
    rpc update(UpdateRequest) returns (UpdateResponse);
    rpc cancel(CancelRequest) returns (CancelResponse);
    rpc get(GetRequest) returns (GetResponse);
    rpc query(QueryRequest) returns (stream Reservation);
    rpc filter(FilterRequest) returns (FilterResponse);

    // another system could monitor newly added/confirmed/canceled reservation
    rpc listen(ListenRequest) returns (stream Reservation);

}
